--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
 
         <Button
             android:id="@+id/btn"
+            android:text="@{viewModel.str}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
