--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,9 +16,9 @@
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
+            android:text="@{viewModel.str}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 </layout>
