--- a/app/src/main/res/layout/item_adapter_rv.xml
+++ b/app/src/main/res/layout/item_adapter_rv.xml
@@ -18,7 +18,7 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Texting" />
+            android:text="@{viewModel.str}" />
 
     </LinearLayout>
 </layout>
